@@ -57,7 +57,12 @@ list.dirs(path = ".", full.names = TRUE, recursive = TRUE)
 \author{Ross Ihaka, Brian Ripley}
 \note{
   File naming conventions are platform dependent.  The pattern matching
-  works with the case of file names as returned by the OS
+  works with the case of file names as returned by the OS.
+#ifdef unix
+
+  On a POSIX filesystem recursive listings will follow symbolic links to
+  directories.
+#endif
 #ifdef windows
 
   \code{path} must specify paths which can be represented in the current
